.. Author notes: this file is formatted with restructured text
(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``RB_ID=#`` correspond to associated messages in commits.

Next Version

6.37.0  2016-09-07

New Features:

  * util-app: Introduce `c.t.app.Flag.letClear` allowing flags to be unset.
    ``RB_ID=868177``


6.36.0  2016-08-25

New Features:

  * util-core: `c.t.util.FuturePool` now optionally exposes metrics on
    their internal state such as active tasks, and completed tasks.
    ``RB_ID=850652``

  * util-core: Add a system property
    `com.twitter.concurrent.schedulerSampleBlockingFraction` that can be
    set to a value between 0.0 and 1.0 (inclusive). When the Scheduler
    runs blocking code, it will log the stacktrace for that fraction of
    the calls. ``RB_ID=861892``

  * util-core: Add Java-friendly API for `StorageUnit`. See `StorageUnit.fromX`
    and `StorageUnit.{times, plus, minus, divide}` methods. ``RB_ID=864546``

Changes in Runtime Behavior:

  * util-eval: The compiler reporter is now reset between code check invocations.
    This means that when there is a failure that it is no longer required to reset
    the entire state to recover and that already compiled and loaded classes can still
    be used. ``RB_ID=859878``

6.35.0  2016-07-07

Changes in Runtime Behavior:

  * util-codec: StringEncoder no longer depends on apache commons-codec, and
    decode will now throw an exception when it fails to decode a byte, instead
    of failing silently. ``RB_ID=833478``

  * util-collection: LruMap is now backed by jdk LinkedHashMap instead of apache
    collections LRUMap. ``RB_ID=833515``

  * util-core: `com.twitter.util.NonFatal` is now implemented by Scala's
    `scala.util.control.NonFatal`. This changes behavior such that
    `java.lang.StackOverflowError` is considered fatal and
    `java.lang.NoSuchMethodException` is considered non-fatal.